--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ askama = "0.12.1"
 tower = {version = "0.4.13", features = ["full"]}
 tower-http = {version = "0.5.2", features = ["full"]}
 async-trait = "0.1.80"
+once_cell = "1.19.0"
+percent-encoding = "2.3.1"
