--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      run: cargo build --release
+    - name: production artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: upload_app
+        path: |
+          target/release/laura_magnet
